# garmin-coach-context

./: README.md  pyproject.toml
src/coach/: cli.py  context.py  database.py  garmin_client.py  mcp.py  utils.py
